# OOP_mai4

./: CMakeLists.txt  Figure.cpp  Figure.h  README.md  array.h  dont_look.txt  main.cpp  point.h
